--- a/resources/abode.css
+++ b/resources/abode.css
@@ -15,12 +15,21 @@ body {
 /* Header */
 header {
   background-color: lightpink;
-  grid-area: 1 / 1 / span 1 / span 3;
+  grid-area: 1 / 2;
 }
 
 h1 {
-  margin: 50% 0px;
+  margin: 50px 0 0 20%;
   position: absolute;
+}
+
+ul {
+  position: absolute;
+  right: 50px;
+}
+
+li {
+  list-style: none;
 }
 
 /* Main */
@@ -28,6 +37,11 @@ main {
   grid-area: 2 / 2;
   background-color: azure;
   text-align: center;  
+}
+
+/* Hobbies */
+#hobbies div {
+  background-color: linen;
 }
 
 /* Footer */
