--- a/resources/abode.css
+++ b/resources/abode.css
@@ -2,12 +2,15 @@ html {
   font-size: 24px;
   display: grid;
   grid-template: 1fr / 10% 1fr 10%;
+  background-color: darkgrey;
 }
 
 body {
   font-family: 'Chakra Petch', arial, sans-serif;
   margin: 0;
   grid-area: 1 / 2;
+  background-color: white;
+  padding: 0px 20px;
 }
 
 p {
@@ -22,4 +25,9 @@ ul {
 
 #skills ul {
   list-style: inside;
+}
+
+/* Footer */
+footer {
+  margin-bottom: 20px;
 }
