--- a/resources/abode.css
+++ b/resources/abode.css
@@ -32,6 +32,13 @@ h1 {
 /* Hamburger toggler */
 #menu-toggle {
   display: inline;
+  position: absolute;
+  right: 15%;
+  top: 50px;
+}
+
+#menu-toggle.checked {
+  display: show;
 }
 
 /* Links */
