--- a/resources/contact.css
+++ b/resources/contact.css
@@ -1,1 +1,14 @@
-/* CONTACT CSS */
+html {
+  font-size: 24px;
+  display: grid;
+  grid-template: 1fr / 10% 1fr 10%;
+  background-color: darkgrey;
+}
+
+body {
+  font-family: 'Chakra Petch', arial, sans-serif;
+  margin: 0;
+  grid-area: 1 / 2;
+  background-color: white;
+  padding: 0px 5%;
+}
