--- a/resources/abode.css
+++ b/resources/abode.css
@@ -2,14 +2,14 @@ html {
   font-size: 24px;
   display: grid;
   grid-template: 1fr / 10% 1fr 10%;
-  background-color: darkgrey;
+  background-color: black;
+  color: white;
 }
 
 body {
   font-family: 'Chakra Petch', arial, sans-serif;
   margin: 0;
   grid-area: 1 / 2;
-  background-color: white;
   padding: 0px 5%;
 }
 
