--- a/resources/contact.css
+++ b/resources/contact.css
@@ -2,7 +2,7 @@ html {
   font-size: 24px;
   display: grid;
   grid-template: 1fr / 10% 1fr 10%;
-  background-color: black;
+  background-color: #121212;
   color: white;
 }
 
