--- a/resources/abode.css
+++ b/resources/abode.css
@@ -2,7 +2,7 @@ html {
   font-size: 24px;
   display: grid;
   grid-template: 1fr / 10% 1fr 10%;
-  background-color: black;
+  background-color: #121212;
   color: white;
 }
 
@@ -36,7 +36,25 @@ h1 {
   position: absolute;
   right: 15%;
   top: 45px;
+  width: 24px;
+  height: 24px;
   opacity: 0;
+  z-index: 1;
+}
+
+#custom-checkbox {
+  position: absolute;
+  right: 15%;
+  top: 45px;
+  height: 24px;
+  width: 24px;
+  background-color: transparent;
+  border: 2px solid white;
+  border-radius: 5px;
+}
+
+#custom-checkbox::after {
+
 }
 
 /* Links */
