--- a/resources/abode.css
+++ b/resources/abode.css
@@ -53,8 +53,15 @@ h1 {
   border-radius: 5px;
 }
 
-#custom-checkbox::after {
-
+#custom-checkbox input:checked {
+  position: absolute;
+  right: 15%;
+  top: 45px;
+  height: 24px;
+  width: 24px;
+  background-color: white;
+  border: 2px solid white;
+  border-radius: 5px;
 }
 
 /* Links */
