--- a/resources/abode.css
+++ b/resources/abode.css
@@ -53,7 +53,7 @@ h1 {
   border-radius: 5px;
 }
 
-#custom-checkbox input:checked {
+#menu-toggle:checked ~ #custom-checkbox {
   position: absolute;
   right: 15%;
   top: 45px;
