--- a/resources/abode.css
+++ b/resources/abode.css
@@ -62,8 +62,20 @@ h1 {
 /* Links */
 
 #links {
-  display: none;
-  /* Remaining style is in the hamburger script */
+  transition: all 0.1s ease-out;
+  position: absolute;
+  right: 15%;
+  border: 1px gray solid;
+  padding: 10px;
+  color: black;
+  background-color: darkgrey;
+  width: 600px;
+}
+
+#menu-toggle:checked ~ #links {
+  display: block;
+  transition: all 0.3s ease-out;
+  background-color: white;
 }
 
 #links * {
