Modify footer style

--- a/resources/contact.css
+++ b/resources/contact.css
@@ -29,7 +29,7 @@ h1 {
 footer {
   margin-bottom: 20px;
   text-align: center;
-  background-color: gray;
+  border-top: 1px solid white;
   padding: 20px;
   margin: 0;
 }
