--- a/resources/abode.css
+++ b/resources/abode.css
@@ -84,7 +84,7 @@ h1 {
 footer {
   margin-bottom: 20px;
   text-align: center;
-  background-color: gray;
   padding: 20px;
   margin: 0;
+  border-top: 1px solid white;
 }
