--- a/resources/abode.css
+++ b/resources/abode.css
@@ -86,6 +86,10 @@ details[open] summary {
   padding-bottom: 10px;
 }
 
+details p {
+  margin: 10px 0px 0px 0px;
+}
+
 /* Working on */
 
 #working-on ul {
