--- a/resources/contact.css
+++ b/resources/contact.css
@@ -13,6 +13,12 @@ body {
   padding: 0px 5%;
 }
 
+/* Header */
+
+header {
+  border-bottom: 1px solid white;
+}
+
 h1 {
   display: inline-block;
   margin: 0px;
