--- a/resources/abode.css
+++ b/resources/abode.css
@@ -20,7 +20,10 @@ ul {
   line-height: 1.5;
 }
 
-header,
+header {
+  border-bottom: 1px solid white;
+}
+
 #introduction,
 #skills {
   border-bottom: 1px solid white;
@@ -30,8 +33,8 @@ header,
 /* Header */ 
 
 h1 {
-  display: inline-block;
-  margin: 20px 0px 0px 0px;
+  margin: 0;
+  line-height: 2;
 }
 
 /* Links toggle */
