--- a/resources/abode.css
+++ b/resources/abode.css
@@ -20,8 +20,8 @@ ul {
   line-height: 1.5;
 }
 
-header {
-  border-bottom: 1px solid white;
+a {
+  color: crimson;
 }
 
 #introduction,
@@ -31,6 +31,10 @@ header {
 }
 
 /* Header */ 
+
+header {
+  border-bottom: 1px solid white;
+}
 
 h1 {
   margin: 0;
