--- a/resources/contact.css
+++ b/resources/contact.css
@@ -19,6 +19,10 @@ header {
   border-bottom: 1px solid white;
 }
 
+a {
+  color: crimson;
+}
+
 h1 {
   display: inline-block;
   margin: 0px;
@@ -29,7 +33,7 @@ h1 {
   float: right;
   position: absolute;
   right: 15%;
-  top: 45px;
+  top: 40px;
 }
 
 /* Main */
