--- a/resources/abode.css
+++ b/resources/abode.css
@@ -24,7 +24,6 @@ a {
   color: crimson;
 }
 
-#introduction,
 #skills {
   border-bottom: 1px solid white;
   padding-bottom: 30px;
@@ -32,7 +31,8 @@ a {
 
 /* Header */ 
 
-header {
+header,
+#introduction {
   border-bottom: 1px solid white;
 }
 
