--- a/resources/abode.css
+++ b/resources/abode.css
@@ -10,6 +10,7 @@
   #links {
     width: 100%;
     right: 0px;
+    background-color: white;
   }
 }
 
@@ -94,6 +95,13 @@ h1 {
 
 #links {
   display: none;
+  position: absolute;
+  right: 15%;
+  border: 1px gray solid;
+  padding: 10px;
+  background-color: #3d3d3d;
+  width: 600px;
+  transition: all 0.1s ease-out
 }
 
 #menu-toggle:checked ~ #links {
