--- a/resources/abode.css
+++ b/resources/abode.css
@@ -1,7 +1,9 @@
+/* GLOBAL (PHONE) DESIGN */
+
 html {
   font-size: 24px;
   display: grid;
-  grid-template: 1fr / 10% 1fr 10%;
+  grid-template: 1fr / 5% 1fr 5%;
   background-color: #121212;
   color: white;
 }
@@ -50,7 +52,7 @@ h1 {
 
 #menu-toggle {
   position: absolute;
-  right: 15%;
+  right: 10%;
   top: 40px;
   width: 24px;
   height: 24px;
@@ -59,9 +61,9 @@ h1 {
 }
 
 #custom-checkbox {
-  transition: all 0.1s ease-out;
+  transition: all 0.2s ease-out;
   position: absolute;
-  right: 15%;
+  right: 10%;
   top: 40px;
   height: 24px;
   width: 24px;
@@ -80,17 +82,15 @@ h1 {
 #links {
   display: none;
   position: absolute;
-  right: 15%;
+  right: 0px;
   border: 1px gray solid;
   padding: 10px;
   background-color: #3d3d3d;
-  width: 600px;
-  transition: all 0.1s ease-out
+  width: 100% - 2px;  /* Remove the border from width */
 }
 
 #menu-toggle:checked ~ #links {
   display: block;
-  transition: all 0.3s ease-out;
   background-color: white;
 }
 
@@ -147,20 +147,4 @@ footer {
   padding: 20px;
   margin: 0;
   border-top: 1px solid white;
-}
-
-/* Phone */
-
-@media only screen and (max-device-width: 500px) {
-  html {
-    grid-template: 1fr / 5% 1fr 5%;
-  }
-}
-
-@media only screen and (max-device-width: 850px) {
-  #links {
-    width: 100%;
-    right: 0px;
-    background-color: white;
-  }
 }
