--- a/resources/abode.css
+++ b/resources/abode.css
@@ -84,9 +84,15 @@ h1 {
   position: absolute;
   right: 0px;
   border: 1px gray solid;
-  padding: 10px;
   background-color: #3d3d3d;
-  width: calc(100% - 22px);  /* Remove the border and padding from width */
+  width: calc(100% - 2px);  /* Remove the border and padding from width */
+}
+
+#links-main li,
+#links-external li,
+#links-instagram li {
+  border-top: 1px solid green;
+  border-bottom: 1px solid green;
 }
 
 #links * {
