--- a/resources/contact.css
+++ b/resources/contact.css
@@ -17,6 +17,7 @@ body {
 
 header {
   border-bottom: 1px solid white;
+  padding-bottom: 20px;
 }
 
 a {
@@ -24,16 +25,8 @@ a {
 }
 
 h1 {
-  display: inline-block;
   margin: 0px;
   line-height: 2;
-}
-
-#go-back-link {
-  float: right;
-  position: absolute;
-  right: 15%;
-  top: 40px;
 }
 
 /* Main */
