--- a/resources/contact.css
+++ b/resources/contact.css
@@ -25,8 +25,8 @@ a {
 }
 
 h1 {
-  margin: 0px;
   line-height: 2;
+  margin: 0;
 }
 
 /* Main */
@@ -49,4 +49,17 @@ footer {
   border-top: 1px solid white;
   padding: 20px;
   margin: 0;
+}
+
+@media only screen and (min-width: 720px) {
+  a#go-back-link {
+    float: right;
+    margin: 35px 0px 0px 0px;
+  }
+
+  h1 {
+    display: inline-block;
+    margin: 10px 0px 0px 0px;
+    line-height: 1.5;
+  }
 }
